--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,11 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
+  name        : "Zhen Xu"
+  uri         : "http://heiroz.github.io"
+  email       : "3210105397@zju.edu.cn"
   bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "avatar.jpg"
   twitter     : "name"
   google_plus : "Name"
 
