--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : # "Short biography for the left-hand sidebar"
   location         : "Hangzhou, Zhejiang, China"
-  employer         : "<a href='https://www.zju.edu.cn/english/' target='_blank'>Zhejiang University</a>"
+  employer         : "[Zhejiang University](https://www.zju.edu.cn/english/)"
   uri              : # URL
   email            : "3210105397@zju.edu.cn"
 
