--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ Name Name:
   uri         : "http://heiroz.github.io"
   email       : "3210105397@zju.edu.cn"
   bio         : "This is the first name."
-  avatar      : "avatar.jpg"
+  avatar      : "avatar_cartoon.webp"
   twitter     : "name"
   google_plus : "Name"
 
