--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "Heiroz/heiroz.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "avatar_cartoon.webp"
+  avatar           : "avatar.jpg"
   name             : "Zhen Xu"
   pronouns         : # example: "she/her"  
   bio              : # "Short biography for the left-hand sidebar"
