--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : # "Short biography for the left-hand sidebar"
   location         : "Chapel Hill, NC, USA"
-  employer         : "University of North Carolina at Chapel Hill"
+  employer         : "UNC at Chapel Hill"
   uri              : # URL
   email            : "zhx@cs.unc.edu"
 
