--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Name Name:
   name        : "Zhen Xu"
-  uri         : "http://heiroz.github.io"
+  uri         : "http://shahinxu.github.io"
   email       : "3210105397@zju.edu.cn"
   bio         : "This is the first name."
   avatar      : "avatar_cartoon.webp"
